--- a/README.me
+++ b/README.me
@@ -37,10 +37,12 @@ Excel でもそのまま開けます。
 テーブルレイアウトで、備品の現在状況や返却状況を一覧で確認できます。
 
 ## 🖼️ 画面定義書（Excel）
-📄 [画面定義書はこちら](./docs/bihin-app_screen-definition.xlsx)
+📄 [画面定義書をダウンロード](./docs/bihin-app_screen-definition.xlsx)
 
-## 🖼️ アプリ画面例
+## 🖼️ アプリ画面例-編集
 ![備品一覧画面-編集](./docs/screenshot-edit.png)
+
+## 🖼️ アプリ画面例-検索
 ![備品一覧画面-検索](./docs/screenshot-search.png)
 
 ## 🚀 デプロイURL
