--- a/README.me
+++ b/README.me
@@ -36,7 +36,7 @@
 📋 **貸出状況の表形式表示**  
 - テーブルレイアウトで、備品の現在状況や返却状況を一覧で確認できます。
 
-🛠️ 苦労した点と解決方法
+🛠️ **苦労した点と解決方法**
 - オートサジェスト機能の非同期通信においてレスポンスが遅くなったため、データベース構成を見直し、Supabaseへ移行することでパフォーマンスを改善。
 - デプロイ後、Mailtrapでパスワードリセット用リンク付きメールの受信は確認できたが、リンクをクリックすると403エラーが発生。
 - 原因は、トークンを暗号化した状態で保存していたことにより、Laravelの照合処理と形式が一致せず、認証に失敗していた点と推測。
@@ -54,13 +54,12 @@
 ## 🚀 デプロイURL
 🔗 https://lending-system-apple.vercel.app/
 
-
-🏢 想定利用シーン
+## 🏢 **想定利用シーン**
 - 就労移行支援アップル梅田にて、利用者へ貸し出す備品の管理業務を効率化するためのWebアプリ。
 
-🧑‍💻 開発体制
+🧑‍💻 **開発体制**
 - 個人開発（要件定義・設計・実装・テスト・デプロイまで一貫して対応）。
 
-💡 工夫したポイント
+💡 **工夫したポイント**
 - ログイン中のユーザーに紐づくデータのみを表示するため、外部キーによるIDの再割り振りとセッション管理を活用し、ユーザーごとにデータを切り替える設計を実現。
 - 検索機能ではUXを重視し、部分一致・完全一致、複数条件のAND検索、未返却フィルタなどに対応。
